--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -119,7 +119,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="parcel_tab">
        <attribute name="title">
@@ -142,7 +142,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>290</y>
+          <y>260</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -152,7 +152,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>273</y>
+          <y>243</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -165,7 +165,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>412</y>
+          <y>382</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -175,7 +175,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>395</y>
+          <y>365</y>
           <width>85</width>
           <height>13</height>
          </rect>
@@ -188,7 +188,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>321</y>
+          <y>291</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -201,7 +201,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>340</y>
+          <y>310</y>
           <width>387</width>
           <height>22</height>
          </rect>
@@ -211,7 +211,7 @@
         <property name="geometry">
          <rect>
           <x>403</x>
-          <y>340</y>
+          <y>310</y>
           <width>48</width>
           <height>22</height>
          </rect>
@@ -236,7 +236,7 @@
           <x>10</x>
           <y>80</y>
           <width>441</width>
-          <height>141</height>
+          <height>157</height>
          </rect>
         </property>
         <attribute name="horizontalHeaderDefaultSectionSize">
@@ -275,7 +275,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>381</y>
+          <y>351</y>
           <width>441</width>
           <height>16</height>
          </rect>
@@ -297,7 +297,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>370</y>
+          <y>340</y>
           <width>90</width>
           <height>13</height>
          </rect>
@@ -310,13 +310,78 @@
         <property name="geometry">
          <rect>
           <x>110</x>
-          <y>369</y>
+          <y>339</y>
           <width>341</width>
           <height>16</height>
          </rect>
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+       <widget class="QLabel" name="str_count_lbl_3">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>470</y>
+          <width>71</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Нийт гудамж:</string>
+        </property>
+       </widget>
+       <widget class="QProgressBar" name="parcel_progressBar">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>440</y>
+          <width>441</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="value">
+         <number>0</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="str_count_lbl_4">
+        <property name="geometry">
+         <rect>
+          <x>83</x>
+          <y>470</y>
+          <width>181</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_selected_parcels_chbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>413</y>
+          <width>121</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Is Selected Parcel</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_entry_parcels_button">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>410</y>
+          <width>286</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Суурьшлын төвөөс гудамжны эхлэлийг авах</string>
         </property>
        </widget>
       </widget>
@@ -542,7 +607,7 @@
           <x>10</x>
           <y>110</y>
           <width>441</width>
-          <height>371</height>
+          <height>201</height>
          </rect>
         </property>
         <property name="currentIndex">
@@ -558,7 +623,7 @@
             <x>10</x>
             <y>10</y>
             <width>411</width>
-            <height>221</height>
+            <height>151</height>
            </rect>
           </property>
           <attribute name="horizontalHeaderDefaultSectionSize">
@@ -668,6 +733,71 @@
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_str_start_button">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>330</y>
+          <width>286</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Суурьшлын төвөөс гудамжны эхлэлийг авах</string>
+        </property>
+       </widget>
+       <widget class="QProgressBar" name="progressBar">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>360</y>
+          <width>441</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="value">
+         <number>0</number>
+        </property>
+       </widget>
+       <widget class="QLabel" name="str_count_lbl">
+        <property name="geometry">
+         <rect>
+          <x>83</x>
+          <y>390</y>
+          <width>181</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QLabel" name="str_count_lbl_2">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>390</y>
+          <width>71</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Нийт гудамж:</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_selected_str_chbox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>333</y>
+          <width>121</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Is Selected Street</string>
         </property>
        </widget>
       </widget>
