--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -323,13 +323,13 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>470</y>
-          <width>71</width>
-          <height>20</height>
+          <y>471</y>
+          <width>95</width>
+          <height>13</height>
          </rect>
         </property>
         <property name="text">
-         <string>Нийт гудамж:</string>
+         <string>Нийт нэгж талбар:</string>
         </property>
        </widget>
        <widget class="QProgressBar" name="parcel_progressBar">
@@ -345,10 +345,10 @@
          <number>0</number>
         </property>
        </widget>
-       <widget class="QLabel" name="str_count_lbl_4">
+       <widget class="QLabel" name="parcel_count_lbl">
         <property name="geometry">
          <rect>
-          <x>83</x>
+          <x>110</x>
           <y>470</y>
           <width>181</width>
           <height>20</height>
@@ -381,7 +381,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>Суурьшлын төвөөс гудамжны эхлэлийг авах</string>
+         <string>Орц, гарцыг автоматаар авах</string>
         </property>
        </widget>
       </widget>
