--- a/view/CreateCaseDialog.ui
+++ b/view/CreateCaseDialog.ui
@@ -669,6 +669,107 @@
     <attribute name="title">
      <string>Нэгдмэл сангийн өөрчлөлт</string>
     </attribute>
+    <widget class="QGroupBox" name="import_groupbox_2">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>10</y>
+       <width>381</width>
+       <height>101</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Import</string>
+     </property>
+     <widget class="QLineEdit" name="landuse_parcel_shape_edit">
+      <property name="geometry">
+       <rect>
+        <x>126</x>
+        <y>32</y>
+        <width>200</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_16">
+      <property name="geometry">
+       <rect>
+        <x>8</x>
+        <y>34</y>
+        <width>101</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Parcel Shapefile</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="open_landuse_parcel_file_button">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>30</y>
+        <width>40</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset resource="resources.qrc">
+        <normaloff>:/plugins/lm2/open.png</normaloff>:/plugins/lm2/open.png</iconset>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QTreeWidget" name="result_landuse_twidget">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>120</y>
+       <width>381</width>
+       <height>321</height>
+      </rect>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOn</enum>
+     </property>
+     <attribute name="headerDefaultSectionSize">
+      <number>100</number>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Maintenance Case Objects</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QTreeWidget" name="check_landuse_twidget">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>10</y>
+       <width>361</width>
+       <height>431</height>
+      </rect>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOn</enum>
+     </property>
+     <attribute name="headerDefaultSectionSize">
+      <number>100</number>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Maintenance Case Objects</string>
+      </property>
+     </column>
+    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
