--- a/view/CreateCaseDialog.ui
+++ b/view/CreateCaseDialog.ui
@@ -669,7 +669,7 @@
     <attribute name="title">
      <string>Нэгдмэл сангийн өөрчлөлт</string>
     </attribute>
-    <widget class="QGroupBox" name="import_groupbox_2">
+    <widget class="QGroupBox" name="import_landuse_groupbox">
      <property name="enabled">
       <bool>false</bool>
      </property>
@@ -711,6 +711,9 @@
       </property>
      </widget>
      <widget class="QPushButton" name="open_landuse_parcel_file_button">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>330</x>
@@ -725,6 +728,9 @@
       <property name="icon">
        <iconset resource="resources.qrc">
         <normaloff>:/plugins/lm2/open.png</normaloff>:/plugins/lm2/open.png</iconset>
+      </property>
+      <property name="autoDefault">
+       <bool>true</bool>
       </property>
      </widget>
     </widget>
