--- a/view/ApplicationsDialog.ui
+++ b/view/ApplicationsDialog.ui
@@ -26,7 +26,7 @@
    <string>Applications Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset>
+   <iconset resource="resources.qrc">
     <normaloff>:/plugins/lm2/application.png</normaloff>:/plugins/lm2/application.png</iconset>
   </property>
   <property name="styleSheet">
@@ -63,7 +63,7 @@
     <string notr="true">QTabBar::tab { width: 150px; }</string>
    </property>
    <property name="currentIndex">
-    <number>9</number>
+    <number>0</number>
    </property>
    <property name="usesScrollButtons">
     <bool>true</bool>
@@ -1142,7 +1142,7 @@
        <string/>
       </property>
       <property name="icon">
-       <iconset>
+       <iconset resource="resources.qrc">
         <normaloff>:/plugins/lm2/down_button.png</normaloff>:/plugins/lm2/down_button.png</iconset>
       </property>
      </widget>
@@ -1159,7 +1159,7 @@
        <string/>
       </property>
       <property name="icon">
-       <iconset>
+       <iconset resource="resources.qrc">
         <normaloff>:/plugins/lm2/up_button.png</normaloff>:/plugins/lm2/up_button.png</iconset>
       </property>
      </widget>
