--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -94,7 +94,7 @@
        <rect>
         <x>4</x>
         <y>4</y>
-        <width>170</width>
+        <width>150</width>
         <height>22</height>
        </rect>
       </property>
@@ -102,9 +102,9 @@
      <widget class="QComboBox" name="working_l2_cbox">
       <property name="geometry">
        <rect>
-        <x>184</x>
+        <x>162</x>
         <y>4</y>
-        <width>170</width>
+        <width>150</width>
         <height>22</height>
        </rect>
       </property>
@@ -119,7 +119,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="parcel_tab">
        <attribute name="title">
@@ -129,7 +129,7 @@
         <property name="geometry">
          <rect>
           <x>9</x>
-          <y>50</y>
+          <y>40</y>
           <width>221</width>
           <height>23</height>
          </rect>
@@ -142,7 +142,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>260</y>
+          <y>230</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -152,7 +152,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>243</y>
+          <y>213</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -165,7 +165,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>382</y>
+          <y>352</y>
           <width>441</width>
           <height>20</height>
          </rect>
@@ -175,7 +175,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>365</y>
+          <y>335</y>
           <width>85</width>
           <height>13</height>
          </rect>
@@ -188,7 +188,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>291</y>
+          <y>261</y>
           <width>74</width>
           <height>13</height>
          </rect>
@@ -201,7 +201,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>310</y>
+          <y>280</y>
           <width>387</width>
           <height>22</height>
          </rect>
@@ -211,7 +211,7 @@
         <property name="geometry">
          <rect>
           <x>403</x>
-          <y>310</y>
+          <y>280</y>
           <width>48</width>
           <height>22</height>
          </rect>
@@ -224,7 +224,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
+          <y>10</y>
           <width>281</width>
           <height>22</height>
          </rect>
@@ -234,9 +234,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>80</y>
+          <y>70</y>
           <width>441</width>
-          <height>157</height>
+          <height>111</height>
          </rect>
         </property>
         <attribute name="horizontalHeaderDefaultSectionSize">
@@ -262,7 +262,7 @@
         <property name="geometry">
          <rect>
           <x>250</x>
-          <y>50</y>
+          <y>40</y>
           <width>201</width>
           <height>23</height>
          </rect>
@@ -275,7 +275,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>351</y>
+          <y>321</y>
           <width>441</width>
           <height>16</height>
          </rect>
@@ -297,7 +297,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>340</y>
+          <y>310</y>
           <width>90</width>
           <height>13</height>
          </rect>
@@ -310,7 +310,7 @@
         <property name="geometry">
          <rect>
           <x>110</x>
-          <y>339</y>
+          <y>309</y>
           <width>341</width>
           <height>16</height>
          </rect>
@@ -323,7 +323,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>471</y>
+          <y>473</y>
           <width>95</width>
           <height>13</height>
          </rect>
@@ -336,7 +336,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>440</y>
+          <y>445</y>
           <width>441</width>
           <height>23</height>
          </rect>
@@ -362,26 +362,94 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>413</y>
-          <width>121</width>
+          <y>380</y>
+          <width>155</width>
           <height>17</height>
          </rect>
         </property>
         <property name="text">
-         <string>Is Selected Parcel</string>
+         <string>Сонгосон нэгж талбарууд</string>
         </property>
        </widget>
        <widget class="QPushButton" name="get_entry_parcels_button">
         <property name="geometry">
          <rect>
-          <x>130</x>
-          <y>410</y>
-          <width>286</width>
+          <x>10</x>
+          <y>408</y>
+          <width>171</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>Орц, гарцыг автоматаар авах</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_street_parcels_button">
+        <property name="geometry">
+         <rect>
+          <x>190</x>
+          <y>408</y>
+          <width>131</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Гудамжинд хувиарлах</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="get_address_button">
+        <property name="geometry">
+         <rect>
+          <x>330</x>
+          <y>408</y>
+          <width>121</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Хаяг авах</string>
+        </property>
+       </widget>
+       <widget class="QCheckBox" name="is_selected_bag_chbox">
+        <property name="geometry">
+         <rect>
+          <x>180</x>
+          <y>380</y>
+          <width>121</width>
+          <height>17</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Сонгосон багаар</string>
+        </property>
+       </widget>
+       <widget class="Line" name="line">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>397</y>
+          <width>441</width>
+          <height>10</height>
+         </rect>
+        </property>
+        <property name="lineWidth">
+         <number>2</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="load_parcel_street_button">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>187</y>
+          <width>141</width>
+          <height>23</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Гудамж харах</string>
         </property>
        </widget>
       </widget>
@@ -592,7 +660,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>20</y>
+          <y>10</y>
           <width>281</width>
           <height>23</height>
          </rect>
@@ -605,9 +673,9 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>110</y>
+          <y>100</y>
           <width>441</width>
-          <height>201</height>
+          <height>191</height>
          </rect>
         </property>
         <property name="currentIndex">
@@ -620,10 +688,10 @@
          <widget class="QTableWidget" name="str_nodes_twidget">
           <property name="geometry">
            <rect>
-            <x>10</x>
-            <y>10</y>
-            <width>411</width>
-            <height>151</height>
+            <x>2</x>
+            <y>3</y>
+            <width>431</width>
+            <height>161</height>
            </rect>
           </property>
           <attribute name="horizontalHeaderDefaultSectionSize">
@@ -666,7 +734,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>50</y>
+          <y>40</y>
           <width>96</width>
           <height>13</height>
          </rect>
@@ -679,7 +747,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>70</y>
+          <y>60</y>
           <width>92</width>
           <height>13</height>
          </rect>
@@ -692,7 +760,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>90</y>
+          <y>80</y>
           <width>92</width>
           <height>13</height>
          </rect>
@@ -705,7 +773,7 @@
         <property name="geometry">
          <rect>
           <x>110</x>
-          <y>49</y>
+          <y>39</y>
           <width>331</width>
           <height>16</height>
          </rect>
@@ -718,7 +786,7 @@
         <property name="geometry">
          <rect>
           <x>110</x>
-          <y>70</y>
+          <y>60</y>
           <width>331</width>
           <height>16</height>
          </rect>
@@ -731,7 +799,7 @@
         <property name="geometry">
          <rect>
           <x>110</x>
-          <y>90</y>
+          <y>80</y>
           <width>331</width>
           <height>16</height>
          </rect>
@@ -745,8 +813,8 @@
          <rect>
           <x>130</x>
           <y>330</y>
-          <width>286</width>
-          <height>23</height>
+          <width>281</width>
+          <height>25</height>
          </rect>
         </property>
         <property name="text">
@@ -805,6 +873,19 @@
          <string>Is Selected Street</string>
         </property>
        </widget>
+       <widget class="QPushButton" name="load_street_parcels_button">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>300</y>
+          <width>281</width>
+          <height>25</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Гудамжин хамаарах нэгж талбаруудыг харах</string>
+        </property>
+       </widget>
       </widget>
      </widget>
      <widget class="QPushButton" name="address_layer_button">
@@ -820,19 +901,6 @@
        <string>Давхарга</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="get_address_button">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>560</y>
-        <width>283</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Хаяг авах</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="apply_address_button">
       <property name="geometry">
        <rect>
@@ -844,6 +912,16 @@
       </property>
       <property name="text">
        <string>Хадгалах</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="working_l3_cbox">
+      <property name="geometry">
+       <rect>
+        <x>320</x>
+        <y>4</y>
+        <width>150</width>
+        <height>22</height>
+       </rect>
       </property>
      </widget>
     </widget>
