--- a/view/AddressNavigatorWidget.ui
+++ b/view/AddressNavigatorWidget.ui
@@ -119,7 +119,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="parcel_tab">
        <attribute name="title">
@@ -892,7 +892,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>618</y>
+        <y>586</y>
         <width>283</width>
         <height>23</height>
        </rect>
@@ -905,7 +905,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>588</y>
+        <y>560</y>
         <width>283</width>
         <height>23</height>
        </rect>
@@ -922,6 +922,19 @@
         <width>150</width>
         <height>22</height>
        </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="address_raster_layer_button">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>612</y>
+        <width>283</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Суурь Давхарга</string>
       </property>
      </widget>
     </widget>
